<resources>
    <string name="app_name">shopping app</string>

    <string name="offer_banner">Offer</string>
    <string name="your_previous_order">Your previous Order</string>
    <string name="see_all">See All</string>
    <string name="category">Category</string>
    <string name="discover">Discover</string>

    <string name="back_txt">back</string>
    <string name="description">Description</string>
    <string name="manufacture_details">Manufacture Details</string>

    <string name="backstack_tag">FragmentBackStackTag</string>

    <string name="FRAGMENT_NAME_TAG">Fragment_Name</string>
    <string name="SELECTED_CATEGORY_TAG">category_tag</string>
    <string name="COLOR_TAG">color_tag</string>
    <string name="OBJECT_TAG">object_tag</string>

    <string name="DESCRIPTION_IMG_TRANSITION_TAG">description_screen_img_transition_TAG</string>
    <string name="DESCRIPTION_NAME_TRANSITION_TAG">description_screen_name_transition_TAG</string>
    <string name="DESCRIPTION_QUANTITY_TRANSITION_TAG">description_screen_quantity_transition_TAG</string>
    <string name="DESCRIPTION_PRICE_TRANSITION_TAG">description_screen_price_transition_TAG</string>
    <string name="DESCRIPTION_LAYOUT_TRANSITION_TAG">description_screen_layout_transition_TAG</string>

    <string name="CATEGORY_IMG_TRANSITION_TAG">category_img_transition</string>
    <string name="CATEGORY_NAME_TRANSITION_TAG">category_name_transition</string>
    <string name="CATEGORY_Layout_TRANSITION_TAG">category_layout_transition</string>

    <string name="your_cart">Your Cart</string>
    <string name="remove_all">Remove all</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total_item">Total Items</string>
    <string name="total_price">Total Price</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>

    <string name="checkout">Checkout</string>
    <string name="home">Home</string>
    <string name="change">Change</string>
    <string name="add_address">Add Address</string>
    <string name="proceed">Proceed</string>
    <string name="loading">loading</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="stock">Stock</string>
    <string name="cancel">Cancel</string>
    <string name="add_category_txt">Add category</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>

    <string name="empty_field_error_msg">empty field</string>
    <string name="log_in">Log in</string>
    <string name="logout">Log out</string>
    <string name="add_item">Add item</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="in_cart">added to cart</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="location">shipping to</string>

</resources>