<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/default_icon_width_height"
        android:layout_height="@dimen/default_icon_width_height"
        android:layout_marginTop="@dimen/high_margin_padding"
        android:id="@+id/img_avatar_fsu"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_2sdp"
        android:background="@drawable/round_frame"
        android:backgroundTint="@color/white"
        android:src="@drawable/icon_avatar"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@color/app_icon_color"
        app:layout_constraintBottom_toTopOf="@id/guideline1_fsu"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guideline1_fsu"
        app:layout_constraintGuide_percent="0.3"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:id="@+id/horizontal_view_fsu"
        app:layout_constraintTop_toTopOf="@id/img_avatar_fsu"
        app:layout_constraintBottom_toBottomOf="@id/img_avatar_fsu"
        android:visibility="invisible"
        />

    <androidx.cardview.widget.CardView
        app:layout_constraintStart_toStartOf="@id/horizontal_view_fsu"
        app:layout_constraintEnd_toEndOf="@id/horizontal_view_fsu"
        android:id="@+id/card_fsu"
        app:cardCornerRadius="50dp"
        android:layout_marginHorizontal="@dimen/average_margin_padding"
        app:layout_constraintTop_toBottomOf="@id/horizontal_view_fsu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/average_margin_padding"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/average_margin_padding"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_fsu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.11" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sign_up_name_txt_fsu"
                style="@style/rounded_text_input_layout"
                app:endIconMode="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/high_margin_padding"
                android:hint="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_line_fsu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_sign_up_name_fsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="80"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sign_up_password_txt_fsu"
                style="@style/rounded_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@id/layout_sign_up_name_txt_fsu"
                app:layout_constraintStart_toStartOf="@id/layout_sign_up_name_txt_fsu"
                app:layout_constraintTop_toBottomOf="@id/layout_sign_up_name_txt_fsu"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_sign_up_password_fsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sign_up_email_txt_fsu"
                style="@style/rounded_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="@id/layout_sign_up_name_txt_fsu"
                app:layout_constraintStart_toStartOf="@id/layout_sign_up_name_txt_fsu"
                app:layout_constraintTop_toBottomOf="@id/layout_sign_up_password_txt_fsu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_sign_up_email_fsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sign_up_phone_txt_fsu"
                style="@style/rounded_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"

                app:layout_constraintEnd_toEndOf="@id/layout_sign_up_name_txt_fsu"
                app:layout_constraintStart_toStartOf="@id/layout_sign_up_name_txt_fsu"
                app:layout_constraintTop_toBottomOf="@id/layout_sign_up_email_txt_fsu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_sign_up_phone_fsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_error_fsu"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/view_separator_fsi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:text="@string/empty_field_error_msg"
                app:drawableStartCompat="@drawable/error" />




            <TextView
                android:id="@+id/btn_sign_up_fsu"
                style="@style/textView_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:layout_constraintBottom_toTopOf="@id/btn_have_account_fsu"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginTop="@dimen/extra_margin_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_sign_up_phone_txt_fsu"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/view_separator_fsi"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up_fsu"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintBottom_toTopOf="@id/btn_have_account_fsu"
                android:layout_margin="@dimen/high_margin_padding"
                />
            <TextView
                android:id="@+id/btn_have_account_fsu"
                style="@style/textView_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:elevation="@dimen/_20sdp"
        android:id="@+id/progress_bar_fsu"
        android:background="@color/unselectedIcon"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/red"
            android:backgroundTint="@color/dark_filter"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>